--- a/index.html
+++ b/index.html
@@ -4,27 +4,39 @@
 	<meta charset="UTF-8">
 	<meta name='viewport' content='width=device-width, initial-scale=1.0'>
 	<title>Golden</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	<header>
+	<header class="header" id="header">
 		<div class="container">
-			<div class="heading clearfix">
-				<img src="img/logo.png" alt="Golden" class="logo">
-				<nav>
-					<ul class="menu">
+			<div class="header__head">
+				<img src="img/logo.png" alt="Golden" class="header__logo">
+				<nav class="header__navigation">
+					<ul class="header__menu">
 						<li><a href="#">Home</a></li>
 						<li><a href="#">Services</a></li>
 						<li><a href="#">Portfolio</a></li>
 						<li><a href="#">About</a></li>
-						<li><a href="#">Contacts</a></li>
+						<li><a href="#">Contact</a></li>
+					</ul>
+					<button class="header__humburger-btn">
+						<i class="fa fa-bars"></i>
+					</button>
+					<ul class="header__hamburger-menu">
+						<li><a href="#">Home</a></li>
+						<li><a href="#">Services</a></li>
+						<li><a href="#">Portfolio</a></li>
+						<li><a href="#">About</a></li>
+						<li><a href="#">Contact</a></li>
 					</ul>
 				</nav>
 			</div>
+			
 			<div class="titles">
-				<div class="titles__first">
+				<p class="titles__first">
 					Welcome To our studio!
-				</div>
+				</p>
 				<h1>
 					It's nice to meet you
 				</h1>
@@ -38,26 +50,26 @@
 				<h2>services</h2>
 				<p>Proin iaculis purus consequat sem cure.</p>
 			</div>
-			<div class="services clearfix">
+			<div class="services">
 				<div class="services__item">
 					<img src="img/icon1.png" alt="Sevice">
 					<h3>E-Commerce</h3>
-					<p>Proin iaculis purus consequat sem cure.Proin iaculis purus consequat sem cure.Proin iaculis purus consequat sem cure.</p>
+					<p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
 				</div>
 				<div class="services__item">
 					<img src="img/icon2.png" alt="Sevice">
 					<h3>Responsive Web</h3>
-					<p>Proin iaculis purus consequat sem cure.Proin iaculis purus consequat sem cure.Proin iaculis purus consequat sem cure.</p>
+					<p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
 				</div>
 				<div class="services__item">
 					<img src="img/icon3.png" alt="Sevice">
 					<h3>Web Security</h3>
-					<p>Proin iaculis purus consequat sem cure.Proin iaculis purus consequat sem cure.Proin iaculis purus consequat sem cure.</p>
+					<p>Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.</p>
 				</div>
 			</div>
 		</div>
 	</section>
-	<section id="portfolio">
+	<section class="portfolio" id="portfolio">
 		<div class="container">
 			<div class="title">
 				<h2>our portfolio</h2>
@@ -81,8 +93,7 @@
 					<div class="projects__text text-left">
 						<h3>July 2010</h3>
 						<p class="projects__header">Our Humble Beginnings</p>
-						<p class="projects__cont cont__right">Proin iaculis purus consequat sem cure 
-digni ssim. Donec porttitora entum suscipit 
+						<p class="projects__cont cont__right">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit 
 aenean rhoncus posuere odio in tincidunt. Proin 
 iaculis purus consequat sem cure digni 
 ssim. Donec porttitora entum suscipit.</p>
@@ -128,10 +139,11 @@ ssim. Donec porttitora entum suscipit.</p>
 			</div>
 		</div>
 	</section>
-	<footer>
+	<footer class="footer" id="footer">
 		<div class="container">
-			<p>© Copyright 2014 FreebiesXpress.com</p>
+			<p>© Copyright 2021 FreebiesXpress.com</p>
 		</div>
 	</footer>
+	<script src="js/main.js"></script>
 </body>
 </html>
